@@ -35,6 +35,10 @@
 	(PokerTableTestCase.test20_1_brokenLeaving): Wrote function.
 	(PokerTableTestCase.test25_buyingInWhilePlaying): Wrote function.
 	(PokerTableTestCase.test26_wrongPlayerUpdateTimes): Wrote function.
+	(PokerTableTestCaseTransient.test27_buyinFailures): Wrote function.
+	(PokerTableTestCaseWithPredefinedDecksAndNoAutoDeal.test27_buyinFailures):
+	Wrote function.
+	(PokerTableTestCase.test27_buyinFailures): Wrote function.
 
 2008-01-26  Bradley M. Kuhn  <bkuhn@ebb.org>
 
